--- a/css/style.css
+++ b/css/style.css
@@ -489,7 +489,7 @@ body{
 .i-fib .ri{
 	overflow: hidden;
 	float: left;
-	width:750px;
+	width:1000px;
 	position: relative;
     left:400px;
     opacity: 0;
@@ -508,14 +508,16 @@ body{
 	text-align: center;
 }
 .i-fib .ri dd .tit span{
-	width: 71px;
-	height: 71px;
-	border:3px solid #fff;
-	display: inline-block;
-	color: #fff;
-	font-size: 24px;
-	font-weight: bold;
-	line-height: 75px;
+    border: 3px solid #fff;
+    color: #fff;
+    display: inline-block;
+    font-size: 24px;
+    font-weight: bold;
+    height: 71px;
+    line-height: 72px;
+    width: 71px;
+    border-radius: 40px;
+    background-color: rgba(255,255,255,0.20);
 }
 .i-fib .ri dd .stit{
 	color: #fff;
