--- a/css/style.css
+++ b/css/style.css
@@ -2920,16 +2920,16 @@ body{
 }
 .roop{
     width:333px;
-    height:328px;
+    height:430px;
     background: #f3f3f3;
-    margin: 0px 0px 0px 62px;
+    margin: 0;
     float: left;
 }
 .erweima{
-    width:350px;
-    height:119px;
+    width:540px;
+
     float:left;
-    margin-left: 158px;
+    margin-left: 90px;
     background: #f6f6f6;
 }
 .erweima img{
@@ -2966,7 +2966,7 @@ body{
     display: block;
     width:30px;
     height:30px;
-    background: url("../image/public/te_16.png") no-repeat;
+    background: url("../image/te_16.png") no-repeat;
     float:left;
     margin: 22px 18px 0px 17px;
 }
@@ -2983,7 +2983,7 @@ body{
     border-bottom:1px solid #d5d5d5;
 }
 .where i{
-    background: url("../image/public/te_19.png") no-repeat;
+    background: url("../image/te_19.png") no-repeat;
 }
 .liuyan{
     display: block;
@@ -3039,10 +3039,12 @@ body{
     border-bottom: 1px solid #dedede;
 }
 .inputs,.inputs-t{
-    width:310px;
+    background-color: white;
+    width:210px;
     height:43px;
     border:1px solid #c3c3c3;
-    margin-right: 80px;
+    margin-right: 25px;
+    margin-left: 30px;
     float:left;
     margin-top: 34px;
 }
@@ -3058,8 +3060,8 @@ body{
     text-align: center;
 }
 .put input{
-    border:0px none;
-    width:200px;
+    border:0 none;
+    width:120px;
     height:43px;
     line-height: 43px;
 }
@@ -3068,11 +3070,12 @@ body{
     letter-spacing: 1px;
 }
 .textlst{
-    width:701px;
-    height:162px;
+    width:480px;
+    height:120px;
     border: 1px solid #c3c3c3;
     padding-top: 14px;
     margin-top: 36px;
+    margin-left: 30px;
     font-size: 14px;
 }
 .submit-tj{
@@ -3082,9 +3085,11 @@ body{
     text-align: center;
     color:#fff;
     font-size: 14px;
-    margin-top: 29px;
+    margin-top: 20px;
     border:0px none;
     background: #c9a072;
+    margin-left: 200px;
+    margin-bottom: 20px;
 }
 .tj-close{
     position: absolute;
