--- a/css/animate.css
+++ b/css/animate.css
@@ -5,15 +5,14 @@
 		background-size:100%; 
 	}
 	50%{
-		background-size:120%; 
+		background-size:107%; 
 		
 	}
 	75%{
-		background-size:110%; 
+		background-size:114%; 
 	}
 	100%{
-		background-size:100%; 
-	
+		background-size:120%; 
 	}
 }
 
@@ -22,7 +21,7 @@
 	animation-name:wobbles;
 	animation-timing-function:ease-in;
 	animation-duration:1s;
-	animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 /*.animate-mas .tit{
 	animation-name:tit;
